unpackaged/main/default/objects/litify_time__lit_Billing_Preference__c/litify_time__lit_Billing_Preference__c.object-meta.xml
<CustomObject>
    <label>Billing Preference</label>
    <nameField>
        <displayFormat>BP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>