unpackaged/main/default/objects/litify_time__lit_Billing_Preference__c/fields/litify_time__lit_Client_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Client_Tax_Id__c</fullName>
    <label>Client Tax Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>